refactor: ready for v2

--- a/webpViewer.html
+++ b/webpViewer.html
@@ -39,7 +39,7 @@
     const selectFolder = e => {
       //文件夹里面所有文件        
       _images = e.target.files
-      console.log('e :>> ', e);
+      // console.log('e :>> ', e);
       //文件夹名称        
       // const relativePath = _images[0].webkitRelativePath
       // const folderName = relativePath.split("/")[0]
@@ -98,6 +98,6 @@
     <img type="image/webp" src="" alt="请选择正确的目录">
   </main>
   <footer></footer>
-</body>
+  </body>
 
 </html>
